# tinytransfer

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  libtinytransfer.dylib  q  requirements.txt  test.py  tinyTransfer.cpp  tinyTransfer.h
src/: test.cpp  tinyTransfer.cpp  tinyTransfer.h
